-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.15 - Feb 2, 2020

 + Linux: support JACK capture
 + Linux: disable system sleep timer while playing
 * Linux: automatically use ALSA output when Pulse isn't installed
   e.g. "libpulse.so.0" is not found

 * --listdev is more reliable
   Show capture devices list even if playback devices list couldn't be shown

 - .m4a write: .m4a(AAC) files created by fmedia couldn't be opened
     by other players, e.g. VLC (v1.10 bug)
   fmedia can read those files with no problems.

 *! config: don't override "output" if it's already initialized
    e.g. for this configuration:

    output "pulse.out"
    output "alsa.out"

    Pulse (the first one) will be used.


fmedia (Android) v0.2 - Jan 7, 2020

 + GUI: save/restore the current path in explorer
 + GUI: "Add URL" dialog
 + GUI: Filter tracks in playlist
 + GUI: Settings dialog
 + GUI: main menu with commands like "Delete File", "Clear List" and others
 * GUI: reorder UI controls


fmedia v1.14 - Jan 5, 2020

 + .caf reader (AAC, ALAC) (no seeking)
 + @stdin: support seeking forward, which is required by several file formats
 - GUI: Windows: "Sort: Random" didn't work


fmedia (Android) v0.1 - Dec 25, 2019

 The first release for Android.  Install from .apk.
 + Plays local files or directories
 + Very simple UI
 + Control buttons on notification bar


fmedia v1.13 - Nov 9, 2019

 + Create a playlist file (.m3u8) from directory
 + GUI: "Sort: Random"
 + GUI-GTK: support multiple tabs
 - GUI-GTK: drag'n'drop didn't work in Ubuntu


fmedia v1.12.1 - Oct 12, 2019

 + help.txt: French translation


fmedia v1.12 - Sep 15, 2019

 + GUI: "Show Media Info": add file size, file date, audio info
 - GUI: redraw items after tab switch for a large playlist
 - GUI: "Show File in Explorer" didn't work if the entry was selected by "Selection Follows Cursor"